--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,43 @@
             android:layout_height="match_parent"
             tools:context=".MainActivity">
 
-            <ListView
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipe_refresh"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:id="@+id/news_list_view"/>
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
+                <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:id="@+id/news_list_view"/>
+
+            </android.support.v4.widget.SwipeRefreshLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
+                android:orientation="vertical"
                 android:visibility="gone"
-                android:id="@+id/empty_text_view"/>
+                android:gravity="center"
+                android:layout_centerInParent="true"
+                android:id="@+id/no_signal_view">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/no_signal"
+                    android:id="@+id/empty_image_view"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textColor="@android:color/black"
+                    android:id="@+id/empty_text_view"/>
+
+            </LinearLayout>
 
             <ProgressBar
                 android:layout_width="wrap_content"
